--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,22 @@ cmake_minimum_required(VERSION 3.15)
 project(sylar LANGUAGES CXX)
 
 set(CXX_STANDARD_REQUIRED 17)
-set(CMAKE_VERBOSE_MAKEFILE ON)
+# set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-# if (NOT CMAKE_BUILD_TYPE)
-#     set(CMAKE_BUILD_TYPE Debug)
-# endif()
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug)
+endif()
+
+if (NOT CMAKE_EXPORT_COMPILE_COMMANDS)
+    set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+
+add_compile_options(-Wall -Werror)
 
 function(print_variable x)
     list(LENGTH ${x} len)
@@ -29,11 +35,18 @@ endfunction()
 set(LIB_SRC
     sylar/log.cc
     sylar/util.cc
+    sylar/config.cc
 )
 
 add_library(sylar SHARED ${LIB_SRC})
+target_include_directories(sylar PUBLIC ${PROJECT_SOURCE_DIR}/sylar ${PROJECT_SOURCE_DIR})
 
 add_executable(test tests/test.cc)
 add_dependencies(test sylar)
-target_include_directories(test PUBLIC sylar/)
+target_include_directories(test PUBLIC ${PROJECT_SOURCE_DIR})
 target_link_libraries(test sylar)
+
+add_executable(test_config tests/test_config.cc)
+add_dependencies(test_config sylar)
+target_include_directories(test_config PUBLIC ${PROJECT_SOURCE_DIR})
+target_link_libraries(test_config sylar)
