--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,13 @@ if (NOT CMAKE_EXPORT_COMPILE_COMMANDS)
     set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 endif()
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
+# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+
 
 add_compile_options(-Wall -Werror)
 
@@ -32,28 +36,19 @@ function(print_variable x)
     endif()
 endfunction()
 
-set(LIB_SRC
-    sylar/log.cc
-    sylar/util.cc
-    sylar/config.cc
-)
-
 # YAML-CPP
 find_package(YAML-CPP REQUIRED)
 print_variable(YAML_CPP_INCLUDE_DIR)
 print_variable(YAML_CPP_LIBRARIES)
 print_variable(YAML-CPP_VERSION)
 
-add_library(sylar SHARED ${LIB_SRC})
-target_include_directories(sylar PUBLIC ${PROJECT_SOURCE_DIR}/sylar ${PROJECT_SOURCE_DIR} ${YAML_CPP_INCLUDE_DIR})
-target_link_libraries(sylar ${YAML_CPP_LIBRARIES})
+# Boost
+find_package(Boost REQUIRED COMPONENTS)
+print_variable(Boost_INCLUDE_DIR)
+print_variable(Boost_LIBRARIES)
+print_variable(Boost_VERSION)
 
-add_executable(test tests/test.cc)
-add_dependencies(test sylar)
-target_include_directories(test PUBLIC ${PROJECT_SOURCE_DIR})
-target_link_libraries(test sylar)
+add_subdirectory(sylar)
 
-add_executable(test_config tests/test_config.cc)
-add_dependencies(test_config sylar)
-target_include_directories(test_config PUBLIC ${PROJECT_SOURCE_DIR})
-target_link_libraries(test_config sylar)
+add_subdirectory(tests)
+
