--- a/conf/log.yml
+++ b/conf/log.yml
@@ -27,3 +27,37 @@ system:
   int_uset: [9, 0, 9]
   str_int_map: {k: 2, p: 3}
   str_int_umap: {uk: 22, up: 33}
+
+class:
+  person:
+    name: "sylar"
+    age: 18
+    sex: true
+  map:
+    person1:
+      name: "person01"
+      age: 1
+      sex: true
+    person2:
+      name: "person02"
+      age: 2
+      sex: false
+  vec_map:
+    group1:
+      - p1:
+        name: "p01"
+        age: 11
+        sex: true
+      - p2:
+        name: "p02"
+        age: 12
+        sex: false
+    group2:
+      - p3:
+        name: "p03"
+        age: 11
+        sex: true
+      - p4:
+        name: "p04"
+        age: 12
+        sex: false
