--- a/conf/log.yml
+++ b/conf/log.yml
@@ -5,17 +5,19 @@ logs:
     appenders:
       - type: FileLogAppender
         level: debug
-        formatter: "%d{%Y-%m-%d %H:%M:%S}%T[%p]%T%f{s}:%l:%T%m%n"
+        formatter: "%d{%Y-%m-%d %H:%M:%S}%T[%p]%T%f{r}:%l:%T%m%n"
         file: logroot.txt
       - type: StdoutLogAppender
-        formatter: "%d{%Y-%m-%d %H:%M:%S}%T%t%T%F%T[%P]%T[%c]%T%f:%l%T%m%n"
+        formatter: "%d{%Y-%m-%d %H:%M:%S} [%P] [%c]%T%t %F%T%f:%l%T%m%n"
         level: debug
   - name: system
     level: debug
     formatter: "%d%T%m%n"
     appenders:
       - type: FileLogAppender
-        level: info
+        level: debug
+        formatter: "%d{%Y-%m-%d %H:%M:%S}%T[%p]%T%f{r}:%l:%T%m%n"
         file: logsys.txt
       - type: StdoutLogAppender
+        formatter: "%d{%Y-%m-%d %H:%M:%S} [%P] [%c]%T%t %F%T%f:%l%T%m%n"
         level: debug
