--- a/conf/log2.yml
+++ b/conf/log2.yml
@@ -5,8 +5,8 @@ logs:
     appenders:
       - type: FileLogAppender
         level: debug
-        formatter: "%d{%Y-%m-%d %H:%M:%S}%T %T%m%n"
+        # formatter: "%d{%Y-%m-%d %H:%M:%S}%T %T%m%n"
         file: mutex.txt
       - type: StdoutLogAppender
-        formatter: "%d{%Y-%m-%d %H:%M:%S} [%P][%c](t:%t)(f:%F) %f{r}:%l%T%m%n"
-        level: debug
+        # formatter: "%d{%Y-%m-%d %H:%M:%S} [%P][%c](t:%t)(f:%F) %f{r}:%l%T%m%n"
+        level: info
