fix(cmake): fix condition configuration at link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ print_variable(CMAKE_BUILD_TYPE)
 print_variable(USE_BOOST_STACKTRACE)
 if (USE_BOOST_STACKTRACE)
     add_compile_definitions(BOOST_STACKTRACE_USE_BACKTRACE) 
+    set(USE_BOOST_STACKTRACE_LINK_LIBRARIES dl backtrace)
+    print_variable(USE_BOOST_STACKTRACE_LINK_LIBRARIES)
     message(STATUS "Result: USE boost::stacktrace and libbacktrace")
 endif()
 message(STATUS "Checked")
